tests/snapshots/examples_fixtures/Modules__Amber__Ink.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Amber/Ink.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.Amber.Ink` doesn't match file path `examples/Modules/Amber/Ink.flx`.

  examples/Modules/Amber/Ink.flx:7:1
  |
7 | module Modules.Amber.Ink {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
